# BioMesh2

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  biomesh2.sh
.github/: copilot-instructions.md
build_test/: biomesh2_example  biomesh2_tests  octree_demo
config/: default.conf
docs/: EmptyVoxelMeshGeneration.md  MoleculeFilter.md  OctreeMeshGeneration.md  VoxelizationMeshGeneration.md
examples/: advanced_octree_demo.cpp  complete_pipeline_demo.cpp  comprehensive_demo.cpp  empty_voxel_to_gid.cpp  filter_demo.cpp  filter_workflow_example.cpp  gid_export_demo.cpp  main.cpp  mesh_demo.cpp  mesh_test.cpp  octree_demo.cpp  stress_analysis_demo.cpp  voxel_demo.cpp
include/biomesh/: VTKExporter.hpp
include/biomesh2/: Atom.hpp  AtomBuilder.hpp  AtomicSpec.hpp  BioMesh2.hpp  BoundingBox.hpp  EmptyVoxelMeshGenerator.hpp  GiDExporter.hpp  HexMesh.hpp  MoleculeFilter.hpp  Octree.hpp  OctreeMeshGenerator.hpp  PDBParser.hpp  ResidueClassifier.hpp  StatisticalAnalysis.hpp  StressAnalysis.hpp  VoxelGrid.hpp  VoxelMeshGenerator.hpp
src/: Atom.cpp  AtomBuilder.cpp  AtomicSpec.cpp  BioMesh2.cpp  BoundingBox.cpp  EmptyVoxelMeshGenerator.cpp  GiDExporter.cpp  HexMesh.cpp  MoleculeFilter.cpp  Octree.cpp  OctreeMeshGenerator.cpp  PDBParser.cpp  ResidueClassifier.cpp  StatisticalAnalysis.cpp  StressAnalysis.cpp  VTKExporter.cpp  VoxelGrid.cpp  VoxelMeshGenerator.cpp
tests/: test_biomesh.cpp  test_biomesh2.cpp  test_molecule_filter.cpp
